add/tweak styles for new custom region map

--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -6,7 +6,7 @@
 
 $separator-color: color.scale($accent-color, $lightness: 80%);
 
-#mapPane {
+#mapPane, #searchBar {
   .leaflet-container {
     font: $font-size $font-family;
   }
@@ -38,15 +38,49 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
     }
   }
 
+  .leaflet-control-edit,
   .leaflet-control-layers,
   .leaflet-control-zoom {
     border: 1px solid $accent-color;
     border-radius: $button-border-radius;
     box-shadow: none;
   }
+  .leaflet-control-edit a,
   .leaflet-control-layers,
   .leaflet-control-zoom a {
     background: rgba(255, 255, 255, .95);
+  }
+  .leaflet-control-edit a,
+  .leaflet-control-zoom a {
+    transition: all .15s ease-in;
+
+    &:hover {
+      background: $accent-color-lightest;
+      transition: all $hover-on-duration ease-out;
+    }
+    &:active, &.selected {
+      background: $accent-color;
+      border-radius: 0 !important; /* clean up rendering issue */
+      transition: all $hover-on-duration ease-out;
+    }
+  }
+  .leaflet-control-zoom a {
+    border-radius: 0;
+    color: $accent-color;
+
+    &:active {
+      color: $bg-color;
+    }
+
+    &:first-child {
+      border-bottom-color: $separator-color;
+      border-top-left-radius: $button-border-radius - 1;
+      border-top-right-radius: $button-border-radius - 1;
+    }
+    &:last-child {
+      border-bottom-left-radius: $button-border-radius - 1;
+      border-bottom-right-radius: $button-border-radius - 1;
+    }
   }
   .leaflet-control-layers {
     font-family: $font-family-headers;
@@ -61,32 +95,6 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
         align-items: center;
         display: flex;
       }
-    }
-  }
-  .leaflet-control-zoom a {
-    border-radius: 0;
-    color: $accent-color;
-    transition: all .15s ease-in;
-
-    &:hover {
-      background: $accent-color-lightest;
-      transition: background $hover-on-duration ease-out;
-    }
-    &:active {
-      background: $accent-color;
-      border-radius: 0 !important; /* clean up rendering issue */
-      color: $bg-color;
-      transition: all $hover-on-duration ease-out;
-    }
-
-    &:first-child {
-      border-bottom-color: $separator-color;
-      border-top-left-radius: $button-border-radius - 1;
-      border-top-right-radius: $button-border-radius - 1;
-    }
-    &:last-child {
-      border-bottom-left-radius: $button-border-radius - 1;
-      border-bottom-right-radius: $button-border-radius - 1;
     }
   }
 
