--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -30,6 +30,8 @@ $border-color: #ddd;
 $border-color-lighter: #efefef;
 $border-color-lightest: #f6f6f6;
 
+$invalid-color: #c00;
+
 $link-color: $accent-color;
 $link-color-active: $accent-color;
 $link-color-hover: $accent-color;
