--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -6,13 +6,13 @@ $breakpoint-tablet-width: 1023px;
 $button-border-radius: 4px;
 $button-text-shadow: 1px 1px 3px #444;
 
+$effect-off-duration: .25s;
+$effect-on-duration: .05s;
+
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-headers: 'Open Sans', sans-serif;
 $font-family-mmi: Tahoma, Verdana, Segoe, sans-serif;
 $font-size: 16px;
-
-$hover-off-duration: .25s;
-$hover-on-duration: .05s;
 
 $sidebar-duration: .25s;
 $sidebar-width: 400px;
