--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -14,7 +14,7 @@ $font-family-headers: 'Open Sans', sans-serif;
 $font-family-mmi: Tahoma, Verdana, Segoe, sans-serif;
 $font-size: 16px;
 
-$sidebar-duration: .25s;
+$sidebar-toggle-duration: .25s;
 $sidebar-width: 400px;
 
 /* Colors */
