--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -23,7 +23,7 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
     overflow: hidden; /* Quell long attributions */
     padding: 2px 4px;
     text-overflow: ellipsis;
-    transition: margin $sidebar-duration ease;
+    transition: margin $sidebar-toggle-duration ease;
     white-space: nowrap;
 
     a {
@@ -84,7 +84,7 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
   }
   .leaflet-control-layers {
     font-family: $font-family-headers;
-    transition: margin $sidebar-duration ease;
+    transition: margin $sidebar-toggle-duration ease;
 
     label {
       cursor: pointer;
