--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,7 +1,7 @@
 @use 'variables' as *;
 
 #summaryPane {
-  transition: margin $sidebar-duration ease;
+  transition: margin $sidebar-toggle-duration ease;
 
   h2 + p {
     margin-bottom: 2rem;
