--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -74,7 +74,7 @@ button {
   user-select: none;
   white-space: nowrap;
 
-  &.reset {
+  &#reset {
     background: $reset-button-color;
     border-color: color.scale($reset-button-color, $blackness: 15%);
     color: $text-color-lighter;
