--- a/src/htdocs/css/_legendBar.scss
+++ b/src/htdocs/css/_legendBar.scss
@@ -38,6 +38,9 @@
   .aftershocks {
     ul {
       color: $text-color-lighter;
+      font-family: $font-family;
+      font-weight: 300;
+      margin-top: .25rem;
     }
   }
 
