tweak font styles

--- a/src/htdocs/css/_titleBar.scss
+++ b/src/htdocs/css/_titleBar.scss
@@ -38,8 +38,8 @@
   }
 
   p {
-    color: $text-color-lighter;
-    font: 1.2rem $font-family-headers;
-    margin: .4rem 0;
+    color: $text-color;
+    font: 1.25rem $font-family;
+    margin: .5rem 0;
   }
 }
