--- a/src/htdocs/css/features/_earthquakes.scss
+++ b/src/htdocs/css/features/_earthquakes.scss
@@ -206,12 +206,12 @@
       content: 'Earthquake';
     }
 
-    bottom: .45rem;
+    bottom: -2px;
     margin: 0;
     padding-bottom: 2px;
     padding-top: 2px;
     position: absolute;
-    right: 0;
+    right: -.5rem;
   }
 
   dd,
