--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -203,6 +203,7 @@
         color: $text-color-lighter;
         font-size: .8rem;
         font-weight: 300;
+        letter-spacing: 0.015rem;
         line-height: 1.5;
       }
       > span {
