change number icons color to green

--- a/src/htdocs/css/_infoBar.scss
+++ b/src/htdocs/css/_infoBar.scss
@@ -24,7 +24,7 @@
       position: relative;
 
       &:before {
-        background: #4a8def;
+        background: #13ad10;
         border-radius: 50%;
         color: $bg-color;
         content: counter(item);
