align map tab w/ leaflet control

--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -20,7 +20,7 @@
 
   #navMain {
     font: 700 1rem/1 $font-family-headers;
-    margin-left: -.5rem;
+    margin-left: -6px;
 
     a {
       border: 1px solid transparent;
