use 2:1 ratio for button width:height

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -255,8 +255,8 @@
     }
 
     .tsunami {
-      height: 2.25rem;
-      top: -.75rem;
+      height: 2.125rem;
+      top: -13px;
 
       img {
         border-radius: $button-border-radius;
