--- a/src/htdocs/css/_legendBar.scss
+++ b/src/htdocs/css/_legendBar.scss
@@ -64,6 +64,7 @@
     font-size: .9rem;
     justify-content: space-around;
     margin: .25rem 0;
+    padding: 0;
 
     &:after {
       content: '7';
