--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -6,7 +6,7 @@ body.sidebar {
     margin-right: $sidebar-width;
   }
 
-  #selMainshock {
+  #selectPane {
     padding-right: $sidebar-width;
   }
 
