--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -18,6 +18,7 @@
 @use 'plotsPane';
 @use 'searchBar';
 @use 'selectBar';
+@use 'selectPane';
 @use 'settingsBar';
 @use 'sideBar';
 @use 'significantEqs';
@@ -74,19 +75,6 @@ body {
   background: $bg-color;
   color: $text-color;
   position: relative;
-
-  &.no-mainshock {
-    #plotsPane,
-    #summaryPane {
-      &:not(.hide) ~ #selMainshock {
-        display: flex;
-      }
-
-      #updated {
-        display: none;
-      }
-    }
-  }
 }
 main {
   position: relative;
@@ -167,30 +155,6 @@ th {
 
 tr {
   border-bottom: 1px solid $border-color-lighter;
-}
-
-#selMainshock {
-  align-items: center;
-  display: none;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  left: 0;
-  padding: var(--padding-header) 0 0;
-  position: absolute;
-  top: 0;
-  transition: padding $sidebar-toggle-duration ease;
-  width: 100%;
-
-  h2 {
-    font-size: 1.75rem;
-    margin: 0 0 1rem;
-    text-align: center;
-  }
-
-  p {
-    margin: 0;
-  }
 }
 
 .content {
