--- a/src/htdocs/css/_variables.scss
+++ b/src/htdocs/css/_variables.scss
@@ -19,11 +19,12 @@ $sidebar-width: 400px;
 
 /* Colors */
 
-$accent-color: #7234dc; /*#6e00ff*/
-$accent-color-lighter: color.scale($accent-color, $alpha: -4%, $lightness: 92%);
-$accent-color-lightest: color.scale($accent-color, $alpha: -4%, $lightness: 97%, $saturation: 25%);
+$accent-color: #4440CC;
+$accent-color-lighter: color.scale($accent-color, $alpha: -4%, $lightness: 91%);
+$accent-color-lightest: color.scale($accent-color, $alpha: -4%, $lightness: 96%, $saturation: 25%);
 
 $bg-color: #fff;
+$bg-color-alpha: color.scale($bg-color, $alpha: -3.5%);
 $bg-color-darker: #f7f7f7;
 
 $border-color: #ddd;
